recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: not found: type Doule
	var y:Doule = 0
              ^Tree:12: error: not found: value get
				y = get(Y)
                                    ^