recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	var x:Double = 0
	var y:Doule = 0
	steps match {
		case 1 => droite(angle)
				avance(length)
				recule(length)
				gauche(2*angle)
				avance(length)
				recule(length)
		case _ => x = getX()
				y = get(Y)
				avance(length)
				tree(steps-1, shrink*length, angle, shrink)
				setPos(x,y)
	}
	
}
